<resources>
    <string name="app_name">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_roster">Roster</string>
    <string name="title_schedule">Schedule</string>

    <!-- </resources> -->
    <!--   <string name="app_name">android_user_registration</string> -->


       <!--  <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string> -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- <string name="back4app_app_id" translatable="false">Your app id here </string> -->
    <string name="back4app_app_id">APP_ID</string>

    <!-- <string name="back4app_client_key" translatable="false"> Your client key here </string> -->
    <string name="back4app_client_key">CLIENT_KEY</string>

    <string name="message_hint">Say anything</string> <!-- added for codepath chat -->
    <string name="send">Send</string>  <!-- added for codepath chat -->

    <string name="profile_me">My Profile Pic</string> <!-- added for codepath chat (incoming & outgoing messages -->
    <string name="profile_other">Other profile pic</string> <!-- added for codepath chat (incoming & outgoing messages -->
</resources>

